🚀 Update to hourly Bitcoin data for real-time updates
- Created fetch_live_bitcoin_hourly.py for hourly data fetching
- Updated GitHub Actions workflow to use hourly data
- Latest price: $90,200.23 (2025-11-19 22:00 UTC)
- Dashboard now updates every hour instead of daily
- 17,507 hourly records (2 years of data)

--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -33,11 +33,11 @@ jobs:
         pip install --upgrade pip
         pip install pandas numpy yfinance requests matplotlib seaborn scikit-learn
 
-    - name: Fetch latest Bitcoin data
+    - name: Fetch latest Bitcoin data (hourly)
       run: |
         cd ml_pipeline
-        python3 fetch_live_bitcoin_data.py
-        echo "Bitcoin data updated at $(date)"
+        python3 fetch_live_bitcoin_hourly.py
+        echo "Bitcoin hourly data updated at $(date)"
 
     - name: Generate M2 analysis
       run: |
